--- a/webvideomeeting/package.json
+++ b/webvideomeeting/package.json
@@ -15,19 +15,6 @@
   "scripts": {
     "start": "example/server.js"
   },
-  "author": "Ben Brittain",
-  "contributors": [
-    {
-      "name": "Ben Brittain",
-      "email": "ben@brittain.org"
-    },
-    {
-      "name": "Dennis Mårtensson",
-      "email": "me@dennis.is"
-    },
-    {
-      "name": "David Peter",
-      "email": "david.a.peter@gmail.com"
-    }
-  ]
+  "orignal author": "Ben Brittain",
+  "editor": "William Zhuang"
 }
